add supervised learning example with multinomial bayes over the 20 newsgroups dataset

--- a/basic_nlp/nlp_demo.ipynb
+++ b/basic_nlp/nlp_demo.ipynb
@@ -617,115 +617,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 570,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 599,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "classifier = MultinomialNB(alpha=0.2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 600,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(tfidf, news.target, test_size=0.25, random_state=42, stratify=news.target)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 601,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03502581701324157"
+       "MultinomialNB(alpha=0.2, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 555,
+     "execution_count": 601,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# metrics.f1_score(news.target, clusterer.predict(tfidf), average='weighted')"
+    "classifier.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 602,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 556,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score: 74.49%\n"
+     ]
+    }
+   ],
    "source": [
-    "# news_categories = pd.DataFrame(news.data, columns=['article'])"
+    "print(f'F1 score: {metrics.f1_score(y_test, classifier.predict(X_test), average=\"weighted\"):.2%}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 603,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# news_categories['actual'] = news.target\n",
-    "# news_categories['predicted'] = clusterer.predict(tfidf)\n",
-    "# news_categories['acrual_name'] = [news.target_names[category] for category in news_categories.actual]\n",
-    "# news_categories['predicted_name'] = [news.target_names[category] for category in news_categories.predicted]"
+    "news_categories = pd.DataFrame(news.data, columns=['article'])\n",
+    "news_categories['actual'] = news.target\n",
+    "news_categories['predicted'] = classifier.predict(tfidf)\n",
+    "news_categories['acrual_name'] = [news.target_names[category] for category in news_categories.actual]\n",
+    "news_categories['predicted_name'] = [news.target_names[category] for category in news_categories.predicted]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 604,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>article</th>\n",
+       "      <th>actual</th>\n",
+       "      <th>predicted</th>\n",
+       "      <th>acrual_name</th>\n",
+       "      <th>predicted_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\\n\\nI am sure some bashers of Pens fans are pr...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>rec.sport.hockey</td>\n",
+       "      <td>rec.sport.hockey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>My brother is in the market for a high-perform...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>comp.sys.ibm.pc.hardware</td>\n",
+       "      <td>comp.sys.ibm.pc.hardware</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\\n\\n\\n\\n\\tFinally you said what you dream abou...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>talk.politics.mideast</td>\n",
+       "      <td>talk.politics.mideast</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\\nThink!\\n\\nIt's the SCSI card doing the DMA t...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>comp.sys.ibm.pc.hardware</td>\n",
+       "      <td>comp.sys.ibm.pc.hardware</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1)    I have an old Jasmine drive which I cann...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>comp.sys.mac.hardware</td>\n",
+       "      <td>comp.sys.mac.hardware</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             article  actual  predicted  \\\n",
+       "0  \\n\\nI am sure some bashers of Pens fans are pr...      10         10   \n",
+       "1  My brother is in the market for a high-perform...       3          3   \n",
+       "2  \\n\\n\\n\\n\\tFinally you said what you dream abou...      17         17   \n",
+       "3  \\nThink!\\n\\nIt's the SCSI card doing the DMA t...       3          3   \n",
+       "4  1)    I have an old Jasmine drive which I cann...       4          4   \n",
+       "\n",
+       "                acrual_name            predicted_name  \n",
+       "0          rec.sport.hockey          rec.sport.hockey  \n",
+       "1  comp.sys.ibm.pc.hardware  comp.sys.ibm.pc.hardware  \n",
+       "2     talk.politics.mideast     talk.politics.mideast  \n",
+       "3  comp.sys.ibm.pc.hardware  comp.sys.ibm.pc.hardware  \n",
+       "4     comp.sys.mac.hardware     comp.sys.mac.hardware  "
+      ]
+     },
+     "execution_count": 604,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# news_categories.head()"
+    "news_categories.head()"
    ]
   },
   {
