add word2vec model over tokenized computer news

--- a/basic_nlp/nlp_demo.ipynb
+++ b/basic_nlp/nlp_demo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 615,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 616,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 617,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "'\\nregular season game.          PENS RULE!!!\\n\\n'"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 617,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 618,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "['regular', 'season', 'game.', 'PENS', 'RULE!!!']"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 618,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 619,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 620,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 621,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "['regular', 'season', 'game', 'pens', 'rule']"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 621,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 622,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 623,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,16 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 624,
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_vectorizer = CountVectorizer(ngram_range=(1, 1), token_pattern = r'[A-z]+', strip_accents='ascii', lowercase=True, stop_words='english')"
+    "count_vectorizer = CountVectorizer(# ngram_range=(1, 1),\n",
+    "                                   token_pattern = r'[A-z]+',\n",
+    "                                   # strip_accents='ascii',\n",
+    "                                   # lowercase=True,\n",
+    "                                   stop_words='english',\n",
+    "                                   min_df=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 625,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 626,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 627,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 628,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 629,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 630,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 631,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,29 +347,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 632,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tfidf_transformer = TfidfTransformer()\n",
-    "tfidf_transformer = TfidfVectorizer(# ngram_range=(1, 2),\n",
-    "                                    token_pattern = r'[A-z]+',\n",
-    "                                    # strip_accents='ascii',\n",
-    "                                    # lowercase=True,\n",
-    "                                    stop_words='english',\n",
-    "                                    # max_features=int(1e4),\n",
-    "                                    # max_df=0.7,\n",
-    "                                    min_df=2)"
+    "tfidf_transformer = TfidfTransformer()\n",
+    "# tfidf_transformer = TfidfVectorizer(# ngram_range=(1, 2),\n",
+    "#                                     token_pattern = r'[A-z]+',\n",
+    "#                                     # strip_accents='ascii',\n",
+    "#                                     # lowercase=True,\n",
+    "#                                     stop_words='english',\n",
+    "#                                     # max_features=int(1e4),\n",
+    "#                                     # max_df=0.7,\n",
+    "#                                     min_df=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 633,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tfidf = tfidf_transformer.fit_transform(vectorized_text)\n",
-    "tfidf = tfidf_transformer.fit_transform(news.data)"
+    "tfidf = tfidf_transformer.fit_transform(vectorized_text)\n",
+    "# tfidf = tfidf_transformer.fit_transform(news.data)"
    ]
   },
   {
@@ -376,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 634,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +393,8 @@
     "for i, line in enumerate(news.data[:5]):\n",
     "    tfidf_result['doc'].append(line)\n",
     "    for j in range(top_n):\n",
-    "        feature_names = tfidf_transformer.get_feature_names()\n",
+    "        feature_names = count_vectorizer.get_feature_names()\n",
+    "        # feature_names = tfidf_transformer.get_feature_names()\n",
     "        term_df = test_df = pd.DataFrame(tfidf.getrow(i).todense(),\n",
     "                                         columns=feature_names)\n",
     "        term = term_df.loc[0].sort_values(ascending=False).reset_index()\n",
@@ -398,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 635,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +508,7 @@
        "4      0.421156  inexpensive      0.329055        drive      0.291421  "
       ]
      },
-     "execution_count": 549,
+     "execution_count": 635,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 636,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 637,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 638,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 639,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +580,7 @@
        "        verbose=False)"
       ]
      },
-     "execution_count": 553,
+     "execution_count": 639,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,18 +591,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 640,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Homogeneity: 21.39%\n",
-      "Completeness: 30.60%\n",
-      "V-measure: 25.18%\n",
-      "Adjusted Rand-Index: 3.50%\n",
-      "Silhouette Coefficient: 0.74%\n"
+      "Homogeneity: 21.28%\n",
+      "Completeness: 30.39%\n",
+      "V-measure: 25.03%\n",
+      "Adjusted Rand-Index: 3.48%\n",
+      "Silhouette Coefficient: 0.73%\n"
      ]
     }
    ],
@@ -617,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 641,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 642,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 643,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 644,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +660,7 @@
        "MultinomialNB(alpha=0.2, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 601,
+     "execution_count": 644,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 645,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 646,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 647,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +793,7 @@
        "4     comp.sys.mac.hardware     comp.sys.mac.hardware  "
       ]
      },
-     "execution_count": 604,
+     "execution_count": 647,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,17 +811,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 655,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import gensim\n",
+    "from nltk import word_tokenize"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 673,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_news = pd.DataFrame(news.data, columns=['article'])\n",
+    "all_news['category'] = news.target\n",
+    "all_news['category_name'] = [news.target_names[category] for category in all_news.category]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 674,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['alt.atheism',\n",
+       " 'comp.graphics',\n",
+       " 'comp.os.ms-windows.misc',\n",
+       " 'comp.sys.ibm.pc.hardware',\n",
+       " 'comp.sys.mac.hardware',\n",
+       " 'comp.windows.x',\n",
+       " 'misc.forsale',\n",
+       " 'rec.autos',\n",
+       " 'rec.motorcycles',\n",
+       " 'rec.sport.baseball',\n",
+       " 'rec.sport.hockey',\n",
+       " 'sci.crypt',\n",
+       " 'sci.electronics',\n",
+       " 'sci.med',\n",
+       " 'sci.space',\n",
+       " 'soc.religion.christian',\n",
+       " 'talk.politics.guns',\n",
+       " 'talk.politics.mideast',\n",
+       " 'talk.politics.misc',\n",
+       " 'talk.religion.misc']"
+      ]
+     },
+     "execution_count": 674,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news.target_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 675,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "computer_news_categories = ['comp.os.ms-windows.misc',\n",
+    "                            'comp.sys.ibm.pc.hardware',\n",
+    "                            'comp.sys.mac.hardware',\n",
+    "                            'comp.windows.x',\n",
+    "                            'sci.electronics']\n",
+    "computer_news = all_news[all_news.category_name.isin(computer_news_categories)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 676,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenized_news = [word_tokenize(article) for article in computer_news.article]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 677,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word2vec = gensim.models.Word2Vec(tokenized_news)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 684,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('DMA', 0.817484974861145)]"
+      ]
+     },
+     "execution_count": 684,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word2vec.wv.most_similar(positive=['harddrive', 'memory'], negative=['cpu'], topn=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 702,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('screen', 0.8096562027931213)]"
+      ]
+     },
+     "execution_count": 702,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word2vec.wv.most_similar(positive=['keyboard', 'mouse'], negative=['monitor'], topn=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 705,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'os'"
+      ]
+     },
+     "execution_count": 705,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word2vec.wv.doesnt_match(['harddrive', 'keyboard', 'os', 'tower'])"
+   ]
   },
   {
    "cell_type": "code",
