add explanatory texts and fix typos

--- a/basic_nlp/nlp_demo.ipynb
+++ b/basic_nlp/nlp_demo.ipynb
@@ -8,7 +8,7 @@
     "Natural Language Processing (NLP) is a set of methods for extracting information from text. But is text not already data and what would we extract? It is data, however it is represented as a continuous string of text like the one you are reading right now. The issue here is that statistics use numbers as input. So how do we make numbers out of text? Usually we break down the text into words. We can then one-hot encode the words and build a binary matrix. The columns of the matrix are the tokens, while the rows are the texts. We can then use the binary matrix as input to a range of numeric functions.\n",
     "\n",
     "# Tokenization\n",
-    "Let us download a dataset of news articles from 20 news groups."
+    "Let us download a dataset of news articles from 20 newsgroups."
    ]
   },
   {
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, note that the `game.` token also includes the punctuation at the end. The `RULE!!!` token is capitalized and includes the punctuation. Capitalization carries its own set of probles as it can make several distinct tokens out of the same sema. We could turn to another basic method for splitting text - regular expressions:"
+    "However, note that the `game.` token also includes the punctuation at the end. The `RULE!!!` token is capitalized and includes the punctuation. Capitalization carries its own set of problems as it can make several distinct tokens out of the same sema. We could turn to another basic method for splitting text - regular expressions:"
    ]
   },
   {
@@ -156,7 +156,7 @@
     "* Foreign words;\n",
     "* Tpyos;\n",
     "\n",
-    "That's why an extensive work must be performed to clean the text and tokenize it. The tokenization methods may also differ depending on the subject matter, the types of texts and the qunatity of documents. Sometimes this task constitutes the bulk of the NLP work.\n",
+    "That's why an extensive work must be performed to clean the text and tokenize it. The tokenization methods may also differ depending on the subject matter, the types of texts and the quantity of documents. Sometimes this task constitutes the bulk of the NLP work.\n",
     "\n",
     "# Stemming\n",
     "look at the following tokens: `go`, `going`. They represent different strings, but have the same meaning. What can we do about this?"
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use this technique for text normalization if we want to focus on the meaning rather than the morphology of the text. The usefullness of the stemming technique is proportional to the text size and the morphological complexity.\n",
+    "We can use this technique for text normalization if we want to focus on the meaning rather than the morphology of the text. The usefulness of the stemming technique is proportional to the text size and the morphological complexity.\n",
     "\n",
     "# One-Hot Encoding\n",
     "We can take our news dataset and build a matrix. The rows of the matrix will represent the various news articles, while the columns will represent a one-hot encoding of all the tokens for all news articles."
@@ -330,7 +330,7 @@
     "\n",
     "$idf(t, D) =  log \\frac{N}{|\\{d \\in D : t \\ d\\}|}$\n",
     "\n",
-    "Hence the etymology of the name - term frequency inverse document frequency (TFIDF). Let's appy this method to our text:"
+    "Hence the etymology of the name - term frequency inverse document frequency (TFIDF). Let's apply this method to our text:"
    ]
   },
   {
@@ -618,7 +618,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Supervised Learning With Naive Bayes"
+    "# Supervised Learning With Naive Bayes\n",
+    "In case, we have the category of the news articles, we can train a model to predict it. The input data for the model will be the TFIDF result. The importance of each term in the sparse matrix will be the predictor for the category of the article. To achieve that, we will use an algorithmic implementation of the Bayes theorem, namely the Multinomial Naive Bayes algorithm."
    ]
   },
   {
@@ -806,7 +807,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Word2Vec"
+    "# Word2Vec\n",
+    "Word2Vec is a word embedding model that calculates the probability of a certain token being preceded or followed by a range of other tokens. The assumption is that positional co-occurrence is proportional to semantic relatedness (the so called 'distributional hypothesis'). The model itself represents each token as a vector of the probability of it being close to every other token in the entire dictionary of the corpus. We can then use the word vectors in their mathematical context. We can calculate the similarity between two words by taking the cosine of the angle between the corresponding vectors. We can calculate relationships between two terms and find the equivalent relationship in a third one by using vector subtraction.\n",
+    "\n",
+    "To demonstrate that, we will train a Word2Vec model on all articles related to computers. We will then see if the relationships between the terms in that context match our intuition. We will start by locating all news articles from the categories: `comp.os.ms-windows.misc`, `comp.sys.ibm.pc.hardware`, `comp.sys.mac.hardware`, `comp.windows.x`, `sci.electronics`."
    ]
   },
   {
@@ -894,6 +898,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 723,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total number of computer news articles is: 4902\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The total number of computer news articles is: {len(tokenized_news)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The number of articles is certainly limited, but nevertheless we can try and see the results of the model. We will investigate the results of the model for the relationships between the terms: `harddrive`, `memory`, `cpu`, `keyboard`, `mouse`, `monitor`, `hardware`, `graphic`, `os` and `tower`. Note that `mouse` and `tower` have different meanings in different contexts of the English language. Since we have trained our algorithm on technical articles, we expect the meaning of those terms to be the one related to computer technology."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 677,
    "metadata": {},
    "outputs": [],
@@ -943,6 +971,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 715,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('software', 0.8138316869735718)]"
+      ]
+     },
+     "execution_count": 715,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word2vec.wv.most_similar(positive=['mouse', 'hardware'], negative=['graphic'], topn=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 705,
    "metadata": {},
    "outputs": [
@@ -959,6 +1007,25 @@
    ],
    "source": [
     "word2vec.wv.doesnt_match(['harddrive', 'keyboard', 'os', 'tower'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 720,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The similarity between mouse and keyboard is: 85.19%\n"
+     ]
+    }
+   ],
+   "source": [
+    "term1 = 'mouse'\n",
+    "term2 = 'keyboard'\n",
+    "print(f'The similarity between {term1} and {term2} is: {word2vec.wv.similarity(term1, term2):.2%}')"
    ]
   },
   {
