make small fixes to the wording

--- a/basic_nlp/nlp_demo.ipynb
+++ b/basic_nlp/nlp_demo.ipynb
@@ -8,7 +8,7 @@
     "Natural Language Processing (NLP) is a set of methods for extracting information from text. But is text not already data and what would we extract? It is data, however it is represented as a continuous string of text like the one you are reading right now. The issue here is that statistics use numbers as input. So how do we make numbers out of text? Usually we break down the text into words. We can then one-hot encode the words and build a binary matrix. The columns of the matrix are the tokens, while the rows are the texts. We can then use the binary matrix as input to a range of numeric functions.\n",
     "\n",
     "# Tokenization\n",
-    "Let us download a dataset of news articles from 20 newsgroups."
+    "Let us download a text dataset based on 20 newsgroups."
    ]
   },
   {
@@ -19,6 +19,33 @@
    "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
     "news = fetch_20newsgroups(subset='all', remove=('headers', 'footers', 'quotes'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".. _20newsgroups_dataset:\n",
+      "\n",
+      "The 20 newsgroups text dataset\n",
+      "------------------------------\n",
+      "\n",
+      "The 20 newsgroups dataset comprises around 18000 newsgroups posts on\n",
+      "20 topics split in two subsets: one for training (or development)\n",
+      "and the other one for testing (or for performance evaluation). The split\n",
+      "between the train and test set is based upon a messages posted before\n",
+      "and after a specific date.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(news.DESCR[:395])"
    ]
   },
   {
@@ -173,22 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The initial for is: go, but after stemming, it becomes: go\n",
-      "The initial for is: going, but after stemming, it becomes: go\n"
+      "The initial form is: go, but after stemming, it becomes: go\n",
+      "The initial form is: going, but after stemming, it becomes: go\n"
      ]
     }
    ],
    "source": [
     "porter = nltk.PorterStemmer()\n",
     "for token in ['go', 'going']:\n",
-    "    print(f'The initial for is: {token}, but after stemming, it becomes: {porter.stem(token)}')"
+    "    print(f'The initial form is: {token}, but after stemming, it becomes: {porter.stem(token)}')"
    ]
   },
   {
@@ -236,11 +263,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 203,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<18846x47137 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 1124205 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "first_article = pd.DataFrame(vectorized_text.getrow(0).todense(0), columns=count_vectorizer.get_feature_names()).loc[0]"
+    "vectorized_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorized_text.getrow(0).todense()"
    ]
   },
   {
@@ -261,7 +320,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_article = pd.DataFrame(vectorized_text.getrow(0).todense(0), columns=count_vectorizer.get_feature_names()).loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1093,11 @@
    "metadata": {},
    "source": [
     "# Supervised Learning With Naive Bayes\n",
-    "In case, we have the category of the news articles, we can train a model to predict it. The input data for the model will be the TFIDF result. The importance of each term in the sparse matrix will be the predictor for the category of the article. To achieve that, we will use an algorithmic implementation of the Bayes theorem, namely the Multinomial Naive Bayes algorithm."
+    "In case, we have the category of the news articles, we can train a model to predict it. The input data for the model will be the TFIDF result. The importance of a combination of terms in the sparse matrix will be the predictor for the category of the article. To achieve that, we will use an algorithmic implementation of the Bayes theorem:\n",
+    "\n",
+    "$P(A|B)=\\frac{P(B|A)P(A)}{P(B)}$\n",
+    "\n",
+    "Our choice of algorithm will be the Multinomial Naive Bayes algorithm."
    ]
   },
   {
