correct the number of required samples function

--- a/ab_testing/ab_testing.ipynb
+++ b/ab_testing/ab_testing.ipynb
@@ -6,33 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_significance(n_a, n_b, mean_a, mean_b, std_a, std_b, alpha=0.95):\n",
+    "def get_significance(n_a, n_b, mean_a, mean_b, std_a, std_b):\n",
     "    std_sampling = sqrt((std_a/sqrt(n_a))**2 + (std_b/sqrt(n_b))**2)\n",
     "    mean_delta = abs(mean_a - mean_b)\n",
     "    p = stats.norm().cdf(x=-mean_delta/std_sampling) * 2\n",
-    "    alt_hypothesis = p < (1 - alpha)\n",
-    "    return p, alt_hypothesis\n",
+    "    return p\n",
+    " \n",
     "\n",
-    "\n",
-    "def get_confidence_intervals(n_a, n_b, mean_a, mean_b, std_a, std_b, alpha=0.95):\n",
-    "    alpha_diff_1_side = alpha + (1-alpha)/2\n",
+    "def get_confidence_intervals(n_a, n_b, mean_a, mean_b, std_a, std_b, alpha=0.05):\n",
     "    std_sampling = sqrt((std_a/sqrt(n_a))**2 + (std_b/sqrt(n_b))**2)\n",
     "    mean_delta = abs(mean_a - mean_b)\n",
-    "    crit_val = stats.norm().ppf(q=alpha_diff_1_side) * std_sampling\n",
+    "    crit_val = stats.norm().ppf(q=(1-alpha)/2) * std_sampling\n",
     "    conf_lower = mean_delta - crit_val\n",
     "    conf_upper = mean_delta + crit_val\n",
     "    return conf_lower, conf_upper\n",
     " \n",
     "\n",
-    "def get_required_n_samples(n_a, n_b, a, b, alpha=0.95, test_power=0.8):\n",
-    "    alpha_diff_1_side = alpha + (1-alpha)/2\n",
-    "    z_alpha = stats.norm().ppf(q=alpha_diff_1_side)\n",
-    "    z_beta = stats.norm().ppf(q=test_power)\n",
-    "    delta = abs(a - b)\n",
-    "    pool_samp_proportion = ((a * n_a) + (b * n_b)) / (n_a + n_b)\n",
-    "    std_distance = z_beta + z_alpha\n",
-    "    n_req_samples = int((std_distance/delta)**2 * pool_samp_proportion * (1-pool_samp_proportion) * 2)\n",
-    "    return n_req_samples"
+    "def get_required_n_samples(std_a, std_b, mean_a, mean_b, alpha=0.05, beta=0.2):\n",
+    "    z_alpha = stats.norm().ppf(q=(1-alpha)/2)\n",
+    "    z_beta = stats.norm().ppf(q=1-beta)\n",
+    "    delta = abs(mean_a - mean_b)\n",
+    "    n_samples = int(((z_alpha*std_a) + (z_beta*std_b))**2 / delta**2)\n",
+    "    return n_samples"
    ]
   },
   {
