add latex formula for the map

--- a/collaborative_filtering.ipynb
+++ b/collaborative_filtering.ipynb
@@ -6,7 +6,8 @@
       "name": "collaborative_filtering.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMtLS3o9fcrGoYvVSo1U9D/"
+      "authorship_tag": "ABX9TyMn/zwR4vg6vt5MomtFfvPZ",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rossrco/experiments/blob/recomm_markdown/collaborative_filtering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -401,6 +412,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AHXbaufXpZWQ"
+      },
+      "source": [
+        "Precision @ K: $p(k)=\\frac{1}{M}\\sum_{i=0}^{M-1}\\frac{1}{k}\\sum_{j=0}^{min(Q_i, k)^-1}rel_{D_i}(R_i(j))$"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -431,7 +451,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fe8xs__fihcS"
+        "id": "Ku49bBAopUYh"
       },
       "source": [
         ""
